objects/PC_Measurement__c.object
<CustomObject>
    <description>Patientconnect custom object used to track patient&apos;s health measurements</description>
    <fields>
        <fullName>PC_Doesnt_Meet_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected or checked when the measurements do not meet the required target.</description>
        <label>Doesn&apos;t Meet Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Measurement_Date__c</fullName>
        <description>The date on which the measurement was taken.</description>
        <label>Measurement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_Measurement_Source__c</fullName>
        <description>The source from which the measurement was taken. For example, medical device, or patient report.</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CloudDX</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Choice 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Measurement__c</fullName>
        <description>The numeric value of the measurement.</description>
        <label>Measurement</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Note__c</fullName>
        <description>A note about the measurement.</description>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Program__c</fullName>
        <description>The reference to the program to which the interaction is related.</description>
        <label>Program</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Measurements</relationshipLabel>
        <relationshipName>Measurements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PC_Source_ID__c</fullName>
        <description>Source ID</description>
        <externalId>true</externalId>
        <label>Source ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Type__c</fullName>
        <description>The type of measurement.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sleep</fullName>
                </value>
                <value>
                    <fullName>Fatigue</fullName>
                </value>
                <value>
                    <fullName>Weight</fullName>
                </value>
                <value>
                    <fullName>Temp</fullName>
                </value>
                <value>
                    <fullName>Glucose</fullName>
                </value>
                <value>
                    <fullName>SpO2</fullName>
                </value>
                <value>
                    <fullName>SYS</fullName>
                </value>
                <value>
                    <fullName>DIA</fullName>
                </value>
                <value>
                    <fullName>PRA</fullName>
                </value>
                <value>
                    <fullName>PRV</fullName>
                </value>
                <value>
                    <fullName>ABR</fullName>
                </value>
                <value>
                    <fullName>MAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Units__c</fullName>
        <description>The unit of measurement.</description>
        <label>Units</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PC_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>lb</fullName>
                </value>
                <value>
                    <fullName>°C</fullName>
                </value>
                <value>
                    <fullName>mmol/L</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>hrs</fullName>
                </value>
                <value>
                    <fullName>Level</fullName>
                </value>
                <value>
                    <fullName>/min</fullName>
                </value>
                <value>
                    <fullName>mmHg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Measurement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_Measurement_Date__c</columns>
        <columns>PC_Type__c</columns>
        <columns>PC_Measurement__c</columns>
        <columns>PC_Units__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Hamilton_Sam</fullName>
        <columns>PC_Type__c</columns>
        <columns>PC_Measurement__c</columns>
        <columns>PC_Units__c</columns>
        <columns>PC_Measurement_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Hamilton, Sam</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Hughes_Madeline</fullName>
        <columns>PC_Type__c</columns>
        <columns>PC_Measurement__c</columns>
        <columns>PC_Units__c</columns>
        <columns>PC_Measurement_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Hughes, Madeline</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Lyman_Gavin</fullName>
        <columns>PC_Type__c</columns>
        <columns>PC_Measurement__c</columns>
        <columns>PC_Units__c</columns>
        <columns>PC_Measurement_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Lyman, Gavin</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Skinner_Faith</fullName>
        <columns>PC_Type__c</columns>
        <columns>PC_Measurement__c</columns>
        <columns>PC_Units__c</columns>
        <columns>PC_Measurement_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Skinner, Faith</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MS-{00000000}</displayFormat>
        <label>Measurement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Measurements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>